welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value taille
	for (i <-0 to taille-1) {
                      ^